--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Speak like Banana</h1>
+    <textarea placeholder="Type the text that you want to know in Minion language" name="" id="text-area" cols="30"
+        rows="10"></textarea>
+    <button id="btn-translate">TRANSLATE</button>
+    <div>Output will come here 👇</div>
+    <div id="output"></div>
+    <script src="app.js"></script>
 </body>
+
 </html>
