--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Speak like Banana</h1>
     <textarea placeholder="Type the text that you want to know in Minion language" name="" id="text-area" cols="30"
-        rows="10"></textarea>
+        rows="10"></textarea> <br> <br>
     <button id="btn-translate">TRANSLATE</button>
-    <div>Output will come here 👇</div>
+    <h1>Output will come here 👇</h1>
     <div id="output"></div>
     <script src="app.js"></script>
 </body>
